# SystemPromptMigrator

./: CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  main.py  pyproject.toml
promptmigrator/: __init__.py  api.py  config.py  knowledge_base.py  models.py
promptmigrator/pipeline/: __init__.py  analyzer.py  evaluator.py  migrator.py  proposer.py
promptmigrator/providers/: __init__.py  anthropic_provider.py  base.py  openai_provider.py
tests/: conftest.py  test_api.py  test_knowledge_base.py  test_pipeline.py  test_providers.py
ui/: streamlit_app.py
